syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

message HelloStreamResponse{
    string response_code=1;
    string totalSize=2;
    string imageId=3;
    string imagePath=4;
    string response_message=5;
}