syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

message HelloServerStreamRequest{
    int32 size=1;
}